Reindeer theme: tabsheet default style changed to previous "framed" style, and previous default named to style "minimal".
svn changeset:8041 branch:6.0

--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -3749,32 +3749,168 @@ td.v-datefield-calendarpanel-nextyear {
 }
 
 /* ./WebContent/VAADIN/themes/reindeer/tabsheet/tabsheet.css */
-.v-tabsheet-spacertd div {
-	border-color: #bfbfbf;
-	border-left: none;
+.v-tabsheet-tabitemcell,
+.v-tabsheet-spacertd {
+	height: 32px;
 }
-.v-tabsheet-tabitem {
+.v-tabsheet-tabitemcell {
+	background: no-repeat;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1208px;
+	padding-left: 3px;
+}
+.v-tabsheet-tabitemcell-first {
+	padding-left: 10px;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1240px;
+}
+.v-tabsheet-tabitem,
+.v-tabsheet-spacertd div {
 	border: none;
-	border-bottom: 1px solid #bfbfbf;
-	color: #4d748f;
+	height: 32px;
+	background: transparent repeat-x;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1272px;
 	padding: 0;
+	color: #222;
+	text-shadow: #fff 0 1px 0;
 }
 .v-tabsheet-tabitem .v-caption {
-	padding: 5px 16px;
+	border: none;
+	height: 23px;
+	background: no-repeat right top;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: right -1304px;
+	padding: 9px 8px 0 6px;
+}
+.v-tabsheet-tabitem .v-captiontext {
+	height: 16px;
+	line-height: 16px;
+}
+.v-tabsheet-tabitemcell-selected {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1336px;
+}
+.v-tabsheet-tabitemcell-selected-first {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1368px;
 }
 .v-tabsheet-tabitem-selected {
-	border: 1px solid #bfbfbf;
-	border-bottom: none;
-	color: #222;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1400px;
+	color: #232930;
 }
 .v-tabsheet-tabitem-selected .v-caption {
-	padding: 4px 15px 6px 15px;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: right -1432px;
+}
+.v-tabsheet-spacertd div {
+	margin-right: 4px;
+}
+.v-tabsheet-spacertd {
+	background: transparent no-repeat right top;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: right -1464px;
 }
 .v-tabsheet-content {
-	border: none;
+	border: 1px solid #dcdcdc;
+	border-bottom: none;
+	border-top: none;
+	color: #222;
+	text-shadow: none;
+}
+.blue .v-tabsheet-content {
+	border-color: #a8bcc5;
+}
+.v-tabsheet-tabsheetpanel {
+	background: #fff;
+}
+.v-sa .v-tabsheet-content,
+.v-ff3 .v-tabsheet-content {
+	border-color: rgba(0,0,0,.1);
 }
 .v-tabsheet-deco {
-	height: 0;
+	height: 1px;
+	border-top: 1px solid #bebebe;
+	background: #e2e2e2;
+	overflow: hidden;
+}
+.blue .v-tabsheet-deco {
+	border-color: #92a3ac;
+	background: #adc2cd;
+}
+.v-sa .v-tabsheet-deco,
+.v-ff3 .v-tabsheet-deco {
+	border-top-color: rgba(0,0,0,.1);
+	background: rgba(0,0,0,.08);
+}
+.v-tabsheet-scroller {
+	height: 31px;
+	margin-top: -31px;
+	padding-right: 3px;
+	border-right: 1px solid #afafaf;
+	position: relative;
+	float: right;
+}
+.v-tabsheet-scroller button {
+	margin-top: 7px;
+}
+.v-tabsheet-scrollerPrev,
+.v-tabsheet-scrollerNext,
+.v-tabsheet-scrollerPrev-disabled,
+.v-tabsheet-scrollerNext-disabled {
+	border: none;
+	background: transparent;
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1496px;
+	width: 18px;
+	height: 17px;
+	overflow: hidden;
+	cursor: default;
+}
+.v-tabsheet-scroller button::-moz-focus-inner {
+	border: none;
+}
+.v-tabsheet-scrollerNext {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1513px;
+}
+.v-tabsheet-scrollerPrev:active {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1530px;
+}
+.v-tabsheet-scrollerNext:active {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1547px;
+}
+.v-tabsheet-scrollerPrev-disabled,
+.v-tabsheet-scrollerPrev-disabled:active {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1564px;
+	opacity: 1;
+	filter: none;
+}
+.v-tabsheet-scrollerNext-disabled,
+.v-tabsheet-scrollerNext-disabled:active {
+  background-image: url(common/img/vertical-sprites.png);
+  -background-image: url(common/img/vertical-sprites-ie6.png);
+  background-position: left -1581px;
+	opacity: 1;
+	filter: none;
 }
 .v-tabsheet-tabs .v-icon,
 .v-tabsheet-tabs .v-captiontext,
@@ -3806,194 +3942,97 @@ td.v-datefield-calendarpanel-nextyear {
 	zoom: 1;
 	display: inline;
 }
-.v-tabsheet-scroller {
-	margin-top: -20px;
-	height: 17px;
-}
-.v-tabsheet-scrollerPrev,
-.v-tabsheet-scrollerNext,
-.v-tabsheet-scrollerPrev-disabled,
-.v-tabsheet-scrollerNext-disabled {
-	border: none;
-	background: transparent;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1208px;
-	width: 18px;
-	height: 17px;
-	overflow: hidden;
-	cursor: default;
-}
-.v-tabsheet-scroller button::-moz-focus-inner {
-	border: none;
-}
-.v-tabsheet-scrollerNext {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1225px;
-}
-.v-tabsheet-scrollerPrev:active {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1242px;
-}
-.v-tabsheet-scrollerNext:active {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1259px;
-}
-.v-tabsheet-scrollerPrev-disabled,
-.v-tabsheet-scrollerPrev-disabled:active {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1276px;
-	opacity: 1;
-	filter: none;
-}
-.v-tabsheet-scrollerNext-disabled,
-.v-tabsheet-scrollerNext-disabled:active {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1293px;
-	opacity: 1;
-	filter: none;
-}
-/* Tabsheet on blue background */
-.blue .v-tabsheet-spacertd div,
-.blue .v-tabsheet-tabitem,
-.blue .v-tabsheet-tabitem-selected  {
-	border-color: #7c8a91;
-}
-/* Tabsheet on black background */
-.black .v-tabsheet-spacertd div,
-.black .v-tabsheet-tabitem,
-.black .v-tabsheet-tabitem-selected  {
-	border-color: #3e4044;
-	color: #6a7f89;
-}
-.black .v-tabsheet-tabitem-selected {
-	color: #c9ccce;
-}
+
+
+
 
 
 
 /**
- * Framed style ---------------
+ * Minimal style --------------
  */
-.v-tabsheet-framed .v-tabsheet-tabitemcell,
-.v-tabsheet-framed .v-tabsheet-spacertd {
-	height: 32px;
+.v-tabsheet-minimal .v-tabsheet-spacertd div {
+	border-bottom: 1px solid #bfbfbf;
+	height: auto;
+	background: transparent;
 }
-.v-tabsheet-framed .v-tabsheet-tabitemcell {
-	background: no-repeat;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1311px;
-	padding-left: 3px;
+.v-tabsheet-minimal .v-tabsheet-tabitemcell,
+.v-tabsheet-minimal .v-tabsheet-spacertd {
+	height: auto;
+	background: transparent;
+	padding-left: 0;
 }
-.v-tabsheet-framed .v-tabsheet-tabitemcell-first {
-	padding-left: 10px;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1343px;
-}
-.v-tabsheet-framed .v-tabsheet-tabitem,
-.v-tabsheet-framed .v-tabsheet-spacertd div {
+.v-tabsheet-minimal .v-tabsheet-tabitem {
 	border: none;
-	height: 32px;
-	background: transparent repeat-x;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1375px;
+	border-bottom: 1px solid #bfbfbf;
+	color: #4d748f;
 	padding: 0;
-	color: #222;
-	text-shadow: #fff 0 1px 0;
-}
-.v-tabsheet-framed .v-tabsheet-tabitem .v-caption {
-	border: none;
-	height: 23px;
-	background: no-repeat right top;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: right -1407px;
-	padding: 9px 8px 0 6px;
-}
-.v-tabsheet-framed .v-tabsheet-tabitem .v-captiontext {
-	height: 16px;
-}
-.v-tabsheet-framed .v-tabsheet-tabitemcell-selected {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1439px;
-}
-.v-tabsheet-framed .v-tabsheet-tabitemcell-selected-first {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1471px;
-}
-.v-tabsheet-framed .v-tabsheet-tabitem-selected {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: left -1503px;
-	color: #232930;
-}
-.v-tabsheet-framed .v-tabsheet-tabitem-selected .v-caption {
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: right -1535px;
-}
-.v-tabsheet-framed .v-tabsheet-spacertd div {
-	margin-right: 4px;
-}
-.v-tabsheet-framed .v-tabsheet-spacertd {
-	background: transparent no-repeat right top;
-  background-image: url(common/img/vertical-sprites.png);
-  -background-image: url(common/img/vertical-sprites-ie6.png);
-  background-position: right -1567px;
-}
-.v-tabsheet-content-framed {
-	border: 1px solid #dcdcdc;
-	border-bottom: none;
-	border-top: none;
-	color: #222;
+	height: auto;
+	background: transparent;
 	text-shadow: none;
 }
-.blue .v-tabsheet-content-framed {
-	border-color: #a8bcc5;
+.v-tabsheet-minimal .v-tabsheet-tabitem .v-caption {
+	padding: 5px 16px;
+	height: auto;
+	background: transparent;
 }
-.v-tabsheet-content-framed .v-tabsheet-tabsheetpanel {
-	background: #fff;
+.v-tabsheet-minimal .v-tabsheet-tabitemcell-selected {
+	background: transparent;
 }
-.v-sa .v-tabsheet-content-framed,
-.v-ff3 .v-tabsheet-content-framed {
-	border-color: rgba(0,0,0,.1);
+.v-tabsheet-minimal .v-tabsheet-tabitem-selected {
+	background: transparent;
+	border: 1px solid #bfbfbf;
+	border-bottom: none;
+	color: #222;
 }
-.v-tabsheet-deco-framed {
-	height: 1px;
-	border-top: 1px solid #bebebe;
-	background: #e2e2e2;
-	overflow: hidden;
+.v-tabsheet-minimal .v-tabsheet-tabitem-selected .v-caption {
+	background: transparent;
+	padding: 4px 15px 6px 15px;
 }
-.blue .v-tabsheet-deco-framed {
-	border-color: #92a3ac;
-	background: #adc2cd;
+.v-tabsheet-content-minimal {
+	border: none;
 }
-.v-sa .v-tabsheet-deco-framed,
-.v-ff3 .v-tabsheet-deco-framed {
-	border-top-color: rgba(0,0,0,.1);
-	background: rgba(0,0,0,.08);
+.v-tabsheet-content-minimal .v-tabsheet-tabsheetpanel {
+	background: transparent;
 }
-.v-tabsheet-framed .v-tabsheet-scroller {
-	height: 31px;
-	margin-top: -31px;
-	padding-right: 3px;
-	border-right: 1px solid #afafaf;
-	position: relative;
-	float: right;
+.v-tabsheet-deco-minimal {
+	height: 0;
+	border: none;
 }
-.v-tabsheet-framed .v-tabsheet-scroller button {
-	margin-top: 7px;
+.v-tabsheet-minimal .v-tabsheet-scroller {
+	margin-top: -20px;
+	height: 17px;
+	padding-right: 0;
+	border-right: none;
+	position: static;
+	float: none;
 }
+.v-tabsheet-minimal .v-tabsheet-scroller button {
+	margin-top: 0;
+}
+/* Minimal tabsheet on blue background */
+.blue .v-tabsheet-minimal .v-tabsheet-spacertd div,
+.blue .v-tabsheet-minimal .v-tabsheet-tabitem,
+.blue .v-tabsheet-minimal .v-tabsheet-tabitem-selected  {
+	border-color: #7c8a91;
+}
+/* Minimal tabsheet on black background */
+.black .v-tabsheet-minimal .v-tabsheet-spacertd div,
+.black .v-tabsheet-minimal .v-tabsheet-tabitem,
+.black .v-tabsheet-minimal .v-tabsheet-tabitem-selected  {
+	border-color: #3e4044;
+	color: #6a7f89;
+}
+.black .v-tabsheet-minimal .v-tabsheet-tabitem-selected {
+	color: #c9ccce;
+}
+.black .v-tabsheet-content-minimal,
+.black .v-tabsheet-content-bar {
+	color: #c9ccce;
+	text-shadow: #000 0 0 1px;
+}
+
+
 
 
 
@@ -4005,12 +4044,13 @@ td.v-datefield-calendarpanel-nextyear {
 .v-tabsheet-bar .v-tabsheet-spacertd {
 	height: 20px;
 }
+.v-tabsheet-bar .v-tabsheet-spacertd {
+	background: transparent;
+}
 .v-tabsheet-bar .v-tabsheet-tabitemcell {
-	background: no-repeat;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
   background-position: left -1599px;
-	padding-left: 3px;
 }
 .v-tabsheet-bar .v-tabsheet-tabitemcell-first {
 	padding-left: 6px;
@@ -4020,29 +4060,19 @@ td.v-datefield-calendarpanel-nextyear {
 }
 .v-tabsheet-bar .v-tabsheet-tabitem,
 .v-tabsheet-bar .v-tabsheet-spacertd div {
-	border: none;
 	height: 20px;
-	background: transparent repeat-x;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
   background-position: left -1639px;
-	padding: 0;
-	color: #222;
-	text-shadow: #fff 0 1px 0;
 	font-size: 11px;
+	margin: 0;
 }
 .v-tabsheet-bar .v-tabsheet-tabitem .v-caption {
-	border: none;
 	height: 18px;
-	background: no-repeat right top;
   background-image: url(common/img/vertical-sprites.png);
   -background-image: url(common/img/vertical-sprites-ie6.png);
   background-position: right -1659px;
 	padding: 2px 12px 0 10px;
-}
-.v-tabsheet-bar .v-tabsheet-tabitem .v-captiontext {
-	height: 16px;
-	line-height: 16px;
 }
 .v-tabsheet-bar .v-tabsheet-tabitemcell-selected {
   background-image: url(common/img/vertical-sprites.png);
@@ -4068,6 +4098,28 @@ td.v-datefield-calendarpanel-nextyear {
 .v-tabsheet-bar .v-tabsheet-scroller {
 	margin-top: -19px;
 }
+.v-tabsheet-bar .v-tabsheet-scroller {
+	margin-top: -19px;
+	height: 17px;
+	padding-right: 0;
+	border-right: none;
+	position: static;
+	float: none;
+}
+.v-tabsheet-bar .v-tabsheet-scroller button {
+	margin-top: 0;
+}
+.v-tabsheet-content-bar {
+	border: none;
+}
+.v-tabsheet-content-bar .v-tabsheet-tabsheetpanel {
+	background: transparent;
+}
+.v-tabsheet-deco-bar {
+	height: 0;
+	border: none;
+}
+/* Content area font color specified with minimal style (reduces additional selectors) */
 
 /* ./WebContent/VAADIN/themes/reindeer/textfield/textfield.css */
 .v-textfield {
