--- a/WebContent/VAADIN/themes/base/tree/tree.css
+++ b/WebContent/VAADIN/themes/base/tree/tree.css
@@ -14,8 +14,10 @@ div.v-tree-node-leaf {
 .v-tree-node-caption {
 	margin-left: 1em;
 }
-.v-tree-node-caption div {
+.v-tree-node span {
 	cursor: pointer;
+}
+.v-tree-node-caption div {
 	white-space: nowrap;
 }
 .v-tree-node-selected span {
