--- a/WebContent/VAADIN/themes/runo/styles.css
+++ b/WebContent/VAADIN/themes/runo/styles.css
@@ -1392,8 +1392,10 @@ div.v-tree-node-leaf {
 .v-tree-node-caption {
 	margin-left: 1em;
 }
-.v-tree-node-caption div {
+.v-tree-node span {
 	cursor: pointer;
+}
+.v-tree-node-caption div {
 	white-space: nowrap;
 }
 .v-tree-node-selected span {
