Small fixes to themes:
Reindeer theme: labels inside table no longer have a specified line-height.

Base theme: tree item icons and captions are now vertically aligned.

svn changeset:8311 branch:6.0

--- a/WebContent/VAADIN/themes/base/tree/tree.css
+++ b/WebContent/VAADIN/themes/base/tree/tree.css
@@ -20,6 +20,10 @@ div.v-tree-node-leaf {
 .v-tree-node-caption div {
 	white-space: nowrap;
 }
+.v-tree-node-caption span,
+.v-tree-node-caption .v-icon {
+	vertical-align: middle;
+}
 .v-tree-node-selected span {
 	background: #999;
 	color: #fff;
