--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1398,6 +1398,10 @@ div.v-tree-node-leaf {
 .v-tree-node-caption div {
 	white-space: nowrap;
 }
+.v-tree-node-caption span,
+.v-tree-node-caption .v-icon {
+	vertical-align: middle;
+}
 .v-tree-node-selected span {
 	background: #999;
 	color: #fff;
@@ -2828,6 +2832,11 @@ td.v-datefield-calendarpanel-nextyear {
 .black .v-label hr {
 	background: #0c0d0e;
 	border-bottom-color: #292b2e;
+}
+
+/* Labels inside Table don't need a line-height */
+.v-table .v-label {
+	line-height: normal;
 }
 
 /* ./WebContent/VAADIN/themes/reindeer/layouts/layouts.css */
